--- a/bootstrap.css
+++ b/bootstrap.css
@@ -329,6 +329,13 @@ progress {
   vertical-align: baseline;
 }
 
+.logo {
+  font-size: 50px;
+  color: #083950;
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
   height: auto;
@@ -5194,6 +5201,12 @@ input[type="button"].btn-block {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   width: 100%;
+}
+
+.card-img-event {
+    width: 100%;
+    height: 29.5vw;
+    object-fit: cover;
 }
 
 .card-img,
